# LZW

./: .gitignore  CMakeLists.txt  README.md  a.out.json  testes.sh
dictionaries/anger/: anger_10.dict  anger_11.dict  anger_12.dict  anger_13.dict  anger_14.dict  anger_15.dict  anger_16.dict  anger_9.dict
dictionaries/fear/: fear_10.dict  fear_11.dict  fear_12.dict  fear_13.dict  fear_14.dict  fear_15.dict  fear_16.dict  fear_9.dict
dictionaries/happy/: happy_10.dict  happy_11.dict  happy_12.dict  happy_13.dict  happy_14.dict  happy_15.dict  happy_16.dict  happy_9.dict
dictionaries/sadness/: sadness_10.dict  sadness_11.dict  sadness_12.dict  sadness_13.dict  sadness_14.dict  sadness_15.dict  sadness_16.dict  sadness_9.dict
include/: LZW.h  Report.h
results/: anger_10.out.json  anger_9.out.json  fear_9.out.json  happy_9.out.json  sadness_10.out.json  sadness_9.out.json
scripts/: create_classification_dictionary.py  cross.py  cross_validation_gray_scale.py  generate_instance.py
src/: CMakeLists.txt  LZW.cpp  Report.cpp  main.cpp
